TLPLenguaje/src/parser/TrezParser.py
# Generated from TrezParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TrezParser ( Parser ):

    grammarFileName = "TrezParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'func'", "'return'", "'if'", 
                     "'else'", "'while'", "'for'", "'in'", "'true'", "'false'", 
                     "'not'", "'|>'", "'**'", "'&&'", "'||'", "'=='", "'!='", 
                     "'<='", "'>='", "'->'", "'<'", "'>'", "'%'", "'.'", 
                     "':'", "'\\'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','", "';'", "'='", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "LET", "FUNC", "RETURN", "IF", "ELSE", 
                      "WHILE", "FOR", "IN", "TRUE", "FALSE", "NOT", "PIPE", 
                      "POW", "AND", "OR", "EQEQ", "NEQ", "LE", "GE", "ARROW", 
                      "LT", "GT", "MOD", "DOT", "COLON", "BACKSLASH", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "COMMA", "SEMI", "EQ", "PLUS", "MINUS", "MUL", "DIV", 
                      "NUMBER", "STRING", "ID", "WS", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_let_stmt = 2
    RULE_bind_tuple = 3
    RULE_func_def = 4
    RULE_return_stmt = 5
    RULE_expr_stmt = 6
    RULE_if_stmt = 7
    RULE_while_stmt = 8
    RULE_for_stmt = 9
    RULE_block = 10
    RULE_param_list = 11
    RULE_rhs = 12
    RULE_expr = 13
    RULE_postfix = 14
    RULE_atom = 15
    RULE_array = 16
    RULE_dict = 17
    RULE_dict_entry = 18

    ruleNames =  [ "program", "statement", "let_stmt", "bind_tuple", "func_def", 
                   "return_stmt", "expr_stmt", "if_stmt", "while_stmt", 
                   "for_stmt", "block", "param_list", "rhs", "expr", "postfix", 
                   "atom", "array", "dict", "dict_entry" ]

    EOF = Token.EOF
    LET=1
    FUNC=2
    RETURN=3
    IF=4
    ELSE=5
    WHILE=6
    FOR=7
    IN=8
    TRUE=9
    FALSE=10
    NOT=11
    PIPE=12
    POW=13
    AND=14
    OR=15
    EQEQ=16
    NEQ=17
    LE=18
    GE=19
    ARROW=20
    LT=21
    GT=22
    MOD=23
    DOT=24
    COLON=25
    BACKSLASH=26
    LPAREN=27
    RPAREN=28
    LBRACE=29
    RBRACE=30
    LBRACK=31
    RBRACK=32
    COMMA=33
    SEMI=34
    EQ=35
    PLUS=36
    MINUS=37
    MUL=38
    DIV=39
    NUMBER=40
    STRING=41
    ID=42
    WS=43
    LINE_COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TrezParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TrezParser.StatementContext)
            else:
                return self.getTypedRuleContext(TrezParser.StatementContext,i)


        def getRuleIndex(self):
            return TrezParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TrezParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.statement()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7836906032862) != 0)):
                    break

            self.state = 43
            self.match(TrezParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def let_stmt(self):
            return self.getTypedRuleContext(TrezParser.Let_stmtContext,0)


        def bind_tuple(self):
            return self.getTypedRuleContext(TrezParser.Bind_tupleContext,0)


        def func_def(self):
            return self.getTypedRuleContext(TrezParser.Func_defContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(TrezParser.Return_stmtContext,0)


        def expr_stmt(self):
            return self.getTypedRuleContext(TrezParser.Expr_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(TrezParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(TrezParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(TrezParser.For_stmtContext,0)


        def block(self):
            return self.getTypedRuleContext(TrezParser.BlockContext,0)


        def getRuleIndex(self):
            return TrezParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = TrezParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.let_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.bind_tuple()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.func_def()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.return_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.expr_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 50
                self.if_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 51
                self.while_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 52
                self.for_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 53
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Let_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(TrezParser.LET, 0)

        def ID(self):
            return self.getToken(TrezParser.ID, 0)

        def EQ(self):
            return self.getToken(TrezParser.EQ, 0)

        def rhs(self):
            return self.getTypedRuleContext(TrezParser.RhsContext,0)


        def SEMI(self):
            return self.getToken(TrezParser.SEMI, 0)

        def getRuleIndex(self):
            return TrezParser.RULE_let_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet_stmt" ):
                return visitor.visitLet_stmt(self)
            else:
                return visitor.visitChildren(self)




    def let_stmt(self):

        localctx = TrezParser.Let_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_let_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(TrezParser.LET)
            self.state = 57
            self.match(TrezParser.ID)
            self.state = 58
            self.match(TrezParser.EQ)
            self.state = 59
            self.rhs()
            self.state = 60
            self.match(TrezParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bind_tupleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(TrezParser.LET, 0)

        def LBRACK(self):
            return self.getToken(TrezParser.LBRACK, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TrezParser.ID)
            else:
                return self.getToken(TrezParser.ID, i)

        def RBRACK(self):
            return self.getToken(TrezParser.RBRACK, 0)

        def EQ(self):
            return self.getToken(TrezParser.EQ, 0)

        def rhs(self):
            return self.getTypedRuleContext(TrezParser.RhsContext,0)


        def SEMI(self):
            return self.getToken(TrezParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TrezParser.COMMA)
            else:
                return self.getToken(TrezParser.COMMA, i)

        def getRuleIndex(self):
            return TrezParser.RULE_bind_tuple

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBind_tuple" ):
                return visitor.visitBind_tuple(self)
            else:
                return visitor.visitChildren(self)




    def bind_tuple(self):

        localctx = TrezParser.Bind_tupleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bind_tuple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(TrezParser.LET)
            self.state = 63
            self.match(TrezParser.LBRACK)
            self.state = 64
            self.match(TrezParser.ID)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 65
                self.match(TrezParser.COMMA)
                self.state = 66
                self.match(TrezParser.ID)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(TrezParser.RBRACK)
            self.state = 73
            self.match(TrezParser.EQ)
            self.state = 74
            self.rhs()
            self.state = 75
            self.match(TrezParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(TrezParser.FUNC, 0)

        def ID(self):
            return self.getToken(TrezParser.ID, 0)

        def LPAREN(self):
            return self.getToken(TrezParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TrezParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(TrezParser.BlockContext,0)


        def param_list(self):
            return self.getTypedRuleContext(TrezParser.Param_listContext,0)


        def getRuleIndex(self):
            return TrezParser.RULE_func_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_def" ):
                return visitor.visitFunc_def(self)
            else:
                return visitor.visitChildren(self)




    def func_def(self):

        localctx = TrezParser.Func_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(TrezParser.FUNC)
            self.state = 78
            self.match(TrezParser.ID)
            self.state = 79
            self.match(TrezParser.LPAREN)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 80
                self.param_list()


            self.state = 83
            self.match(TrezParser.RPAREN)
            self.state = 84
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(TrezParser.RETURN, 0)

        def rhs(self):
            return self.getTypedRuleContext(TrezParser.RhsContext,0)


        def SEMI(self):
            return self.getToken(TrezParser.SEMI, 0)

        def getRuleIndex(self):
            return TrezParser.RULE_return_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = TrezParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(TrezParser.RETURN)
            self.state = 87
            self.rhs()
            self.state = 88
            self.match(TrezParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rhs(self):
            return self.getTypedRuleContext(TrezParser.RhsContext,0)


        def SEMI(self):
            return self.getToken(TrezParser.SEMI, 0)

        def getRuleIndex(self):
            return TrezParser.RULE_expr_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_stmt" ):
                return visitor.visitExpr_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expr_stmt(self):

        localctx = TrezParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.rhs()
            self.state = 91
            self.match(TrezParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(TrezParser.IF, 0)

        def LPAREN(self):
            return self.getToken(TrezParser.LPAREN, 0)

        def rhs(self):
            return self.getTypedRuleContext(TrezParser.RhsContext,0)


        def RPAREN(self):
            return self.getToken(TrezParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TrezParser.BlockContext)
            else:
                return self.getTypedRuleContext(TrezParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(TrezParser.ELSE, 0)

        def if_stmt(self):
            return self.getTypedRuleContext(TrezParser.If_stmtContext,0)


        def getRuleIndex(self):
            return TrezParser.RULE_if_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = TrezParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(TrezParser.IF)
            self.state = 94
            self.match(TrezParser.LPAREN)
            self.state = 95
            self.rhs()
            self.state = 96
            self.match(TrezParser.RPAREN)
            self.state = 97
            self.block()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 98
                self.match(TrezParser.ELSE)
                self.state = 101
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 99
                    self.if_stmt()
                    pass
                elif token in [29]:
                    self.state = 100
                    self.block()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(TrezParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(TrezParser.LPAREN, 0)

        def rhs(self):
            return self.getTypedRuleContext(TrezParser.RhsContext,0)


        def RPAREN(self):
            return self.getToken(TrezParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(TrezParser.BlockContext,0)


        def getRuleIndex(self):
            return TrezParser.RULE_while_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = TrezParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(TrezParser.WHILE)
            self.state = 106
            self.match(TrezParser.LPAREN)
            self.state = 107
            self.rhs()
            self.state = 108
            self.match(TrezParser.RPAREN)
            self.state = 109
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(TrezParser.FOR, 0)

        def ID(self):
            return self.getToken(TrezParser.ID, 0)

        def IN(self):
            return self.getToken(TrezParser.IN, 0)

        def rhs(self):
            return self.getTypedRuleContext(TrezParser.RhsContext,0)


        def block(self):
            return self.getTypedRuleContext(TrezParser.BlockContext,0)


        def getRuleIndex(self):
            return TrezParser.RULE_for_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_stmt" ):
                return visitor.visitFor_stmt(self)
            else:
                return visitor.visitChildren(self)




    def for_stmt(self):

        localctx = TrezParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(TrezParser.FOR)
            self.state = 112
            self.match(TrezParser.ID)
            self.state = 113
            self.match(TrezParser.IN)
            self.state = 114
            self.rhs()
            self.state = 115
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(TrezParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TrezParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TrezParser.StatementContext)
            else:
                return self.getTypedRuleContext(TrezParser.StatementContext,i)


        def getRuleIndex(self):
            return TrezParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = TrezParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(TrezParser.LBRACE)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7836906032862) != 0):
                self.state = 118
                self.statement()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(TrezParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TrezParser.ID)
            else:
                return self.getToken(TrezParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TrezParser.COMMA)
            else:
                return self.getToken(TrezParser.COMMA, i)

        def getRuleIndex(self):
            return TrezParser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = TrezParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(TrezParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 127
                self.match(TrezParser.COMMA)
                self.state = 128
                self.match(TrezParser.ID)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RhsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TrezParser.RULE_rhs

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprRhsContext(RhsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TrezParser.RhsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(TrezParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprRhs" ):
                return visitor.visitExprRhs(self)
            else:
                return visitor.visitChildren(self)


    class LambdaDefContext(RhsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TrezParser.RhsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BACKSLASH(self):
            return self.getToken(TrezParser.BACKSLASH, 0)
        def ID(self):
            return self.getToken(TrezParser.ID, 0)
        def ARROW(self):
            return self.getToken(TrezParser.ARROW, 0)
        def rhs(self):
            return self.getTypedRuleContext(TrezParser.RhsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaDef" ):
                return visitor.visitLambdaDef(self)
            else:
                return visitor.visitChildren(self)



    def rhs(self):

        localctx = TrezParser.RhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_rhs)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                localctx = TrezParser.LambdaDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(TrezParser.BACKSLASH)
                self.state = 135
                self.match(TrezParser.ID)
                self.state = 136
                self.match(TrezParser.ARROW)
                self.state = 137
                self.rhs()
                pass
            elif token in [9, 10, 11, 27, 29, 31, 37, 40, 41, 42]:
                localctx = TrezParser.ExprRhsContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TrezParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PostfixExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TrezParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def postfix(self):
            return self.getTypedRuleContext(TrezParser.PostfixContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixExpr" ):
                return visitor.visitPostfixExpr(self)
            else:
                return visitor.visitChildren(self)


    class PipeOpContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TrezParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TrezParser.ExprContext)
            else:
                return self.getTypedRuleContext(TrezParser.ExprContext,i)

        def PIPE(self):
            return self.getToken(TrezParser.PIPE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipeOp" ):
                return visitor.visitPipeOp(self)
            else:
                return visitor.visitChildren(self)


    class AndExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TrezParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TrezParser.ExprContext)
            else:
                return self.getTypedRuleContext(TrezParser.ExprContext,i)

        def AND(self):
            return self.getToken(TrezParser.AND, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TrezParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TrezParser.ExprContext)
            else:
                return self.getTypedRuleContext(TrezParser.ExprContext,i)

        def MUL(self):
            return self.getToken(TrezParser.MUL, 0)
        def DIV(self):
            return self.getToken(TrezParser.DIV, 0)
        def MOD(self):
            return self.getToken(TrezParser.MOD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivExpr" ):
                return visitor.visitMulDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class CompareExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TrezParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TrezParser.ExprContext)
            else:
                return self.getTypedRuleContext(TrezParser.ExprContext,i)

        def LT(self):
            return self.getToken(TrezParser.LT, 0)
        def LE(self):
            return self.getToken(TrezParser.LE, 0)
        def GT(self):
            return self.getToken(TrezParser.GT, 0)
        def GE(self):
            return self.getToken(TrezParser.GE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompareExpr" ):
                return visitor.visitCompareExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TrezParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TrezParser.ExprContext)
            else:
                return self.getTypedRuleContext(TrezParser.ExprContext,i)

        def EQEQ(self):
            return self.getToken(TrezParser.EQEQ, 0)
        def NEQ(self):
            return self.getToken(TrezParser.NEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqExpr" ):
                return visitor.visitEqExpr(self)
            else:
                return visitor.visitChildren(self)


    class PowExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TrezParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)
